--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -8,80 +8,10 @@
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<title>Dashboard Template for BootsFaces</title>
-	<style type="text/css">
-.noScrolllayoutUnit .ui-layout-unit-content {
-	overflow: hidden;
-	padding: 0px;
-}
 
-.noScrolllayoutUnit {
-	padding: 0px;
-}
 
-.ui-layout, .ui-layout-doc, .ui-layout-unit, .ui-layout-wrap,
-	.ui-layout-bd, .ui-layout-hd {
-	border: none;
-}
 
-.ui-layout-unit .ui-layout-unit-content {
-	padding: 0px;
-}
 
-.nav  {
-	height: 70px
-}
-
-a.menubaritem:only-child {
-	   color: white;
-	   font-size: 31px;
-}
-
-.ui-menu {
-	background: #49c0f0; /* Old browsers */
-	background: -moz-linear-gradient(top, #49c0f0 0%, #2cafe3 100%);
-	/* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #49c0f0),
-		color-stop(100%, #2cafe3)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #49c0f0 0%, #2cafe3 100%);
-	/* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #49c0f0 0%, #2cafe3 100%);
-	/* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #49c0f0 0%, #2cafe3 100%);
-	/* IE10+ */
-	background: linear-gradient(to bottom, #49c0f0 0%, #2cafe3 100%);
-	/* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#49c0f0',
-		endColorstr='#2cafe3', GradientType=0); /* IE6-9 */
-	color : white;
-}
-
-.ui-widget-content a {
-  color: #4f4f4f;
-}
-.ui-panelmenu .ui-panelmenu-header {
-  cursor: pointer;
-  position: relative;
-  margin: 0;
-  zoom: 1;
-  border: 0px;
-  border-right: solid 1px transparent;
-  }
-  
-  .ui-corner-all {
-  -moz-border-radius: 0px;
-   -webkit-border-radius: 0px; 
-   border-radius:0px; 
-}
-
-.ui-corner-top {
-  -moz-border-radius-topleft: 0px;
-  -webkit-border-top-left-radius: 0px;
-  border-top-left-radius: 0px;
-  -moz-border-radius-topright: 0px;
-  -webkit-border-top-right-radius: 0px;
-  border-top-right-radius: 0px;
-}
-</style>
 
 
 </h:head>
@@ -186,6 +116,6 @@ a.menubaritem:only-child {
 			<ui:insert name="content"></ui:insert>
 		</p:layoutUnit>
 	</p:layout>
-
+<h:outputStylesheet library="css" name="style.css"  />
 </h:body>
 </html>
