--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -112,7 +112,7 @@
 
 
 		<p:layoutUnit id="center" position="center" gutter="0"
-			collapsible="true">
+			collapsible="true" style="padding:0px">
 			<ui:insert name="content"></ui:insert>
 		</p:layoutUnit>
 	</p:layout>
