--- a/src/main/webapp/employee/addemployee.xhtml
+++ b/src/main/webapp/employee/addemployee.xhtml
@@ -14,7 +14,12 @@
 
 			<h:form>
 
-
+				<p:breadCrumb>
+					<p:menuitem value="EmployeeManament" url="#" />
+					<p:menuitem value="EmployeeManament" url="#" />
+					<p:menuitem value="createEmployee" url="#" />
+				
+				</p:breadCrumb>
 				<p:panel id="panel" header="Add Employee">
 
 
