--- a/src/main/webapp/position/list.xhtml
+++ b/src/main/webapp/position/list.xhtml
@@ -17,27 +17,24 @@
 						<p:menuitem value="Employees" url="#" />
 
 					</p:breadCrumb>
-				<p:panel header="Employee Table">
+				<p:panel header="Position Table">
 
 				
 
-					<p:dataTable id="emtable" value=""  tableStyle="table-layout: auto;">
+					<p:dataTable id="emtable" value="" tableStyle="table-layout: auto;">
 						<p:column headerText="#">
 							<h:outputText value="" />
 						</p:column>
 
-						<p:column headerText="FirstName">
+						<p:column headerText="PositionName">
 							<h:outputText value="" />
 						</p:column>
 
-						<p:column headerText="LastName">
+						<p:column headerText="Description">
 							<h:outputText value="" />
 						</p:column>
 
-						<p:column headerText="Position">
-							<h:outputText value="" />
-						</p:column>
-
+						
 						<p:column style="text-align:center;width:15%">
 							<p:commandButton value="Edit" styleClass="ui-priority-primary" />
 						</p:column>
