--- a/src/main/webapp/user/list.xhtml
+++ b/src/main/webapp/user/list.xhtml
@@ -21,7 +21,7 @@
 
 				
 
-					<p:dataTable id="emtable" value="">
+					<p:dataTable id="emtable" value="" tableStyle="table-layout: auto;">
 						<p:column headerText="#">
 							<h:outputText value="" />
 						</p:column>
