--- a/src/main/webapp/employee/addemployee.xhtml
+++ b/src/main/webapp/employee/addemployee.xhtml
@@ -15,9 +15,9 @@
 			<h:form>
 
 				<p:breadCrumb>
+					<p:menuitem value="EmployeeManament" url="/template.xhtml" />
 					<p:menuitem value="EmployeeManament" url="#" />
-					<p:menuitem value="EmployeeManament" url="#" />
-					<p:menuitem value="createEmployee" url="#" />
+					<p:menuitem value="createEmployee" url="/employee/add.xhtml" />
 				
 				</p:breadCrumb>
 				<p:panel id="panel" header="Add Employee">
