--- a/src/main/webapp/employee/update.xhtml
+++ b/src/main/webapp/employee/update.xhtml
@@ -13,9 +13,9 @@
 
 			<h:form>
 				<p:breadCrumb>
-					<p:menuitem value="" url="#" />
+					<p:menuitem value="" url="/template.xhtml" />
 					<p:menuitem value="EmployeeManament" url="#" />
-					<p:menuitem value="UpdateEmployee" url="#" />
+					<p:menuitem value="UpdateEmployee" url="/employee/update.xhtml" />
 
 				</p:breadCrumb>
 
