--- a/src/main/webapp/position/list.xhtml
+++ b/src/main/webapp/position/list.xhtml
@@ -12,9 +12,9 @@
 			<h:form>
 				
 					<p:breadCrumb>
+						<p:menuitem value="EmployeeManament" url="/template.xhtml" />
 						<p:menuitem value="EmployeeManament" url="#" />
-						<p:menuitem value="EmployeeManament" url="#" />
-						<p:menuitem value="Employees" url="#" />
+						<p:menuitem value="Employees" url="/position/list.xhtml" />
 
 					</p:breadCrumb>
 				<p:panel header="Position Table">
