--- a/src/main/webapp/user/add.xhtml
+++ b/src/main/webapp/user/add.xhtml
@@ -15,9 +15,9 @@
 			<h:form>
 
 				<p:breadCrumb>
-					<p:menuitem value="hom,e" url="#" />
+					<p:menuitem value="hom,e" url="/template.xhtml" />
 					<p:menuitem value="UserMangement" url="#" />
-					<p:menuitem value="CreateUser" url="#" />
+					<p:menuitem value="CreateUser" url="/user/add.xhtml" />
 
 
 				</p:breadCrumb>
