--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -88,7 +88,7 @@
 								action="/position/list.xhtml" icon="ui-icon-disk" />
 						</p:submenu>
 
-						<p:submenu label="RoleMangement" icon="ui-icon-arrowrefresh-1-w">
+						<p:submenu label="RoleMangement" >
 							<p:menuitem value="CreateRole" action="/role/add.xhtml"
 								icon="ui-icon-disk" />
 							<p:menuitem value="UpdateRole"
