มึงนะมึง เมนูทีหลังใช่ outcome ไม่ไดใช้ action

--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -83,30 +83,30 @@
 						<p:submenu label="PositionMangement">
 
 							<p:menuitem value="CreatePosition"
-								action="/position/add.xhtml" icon="ui-icon-disk" />
+								outcome="/position/add.xhtml" icon="ui-icon-disk" />
 							<p:menuitem value="UpdatePosition"
-								action="/position/list.xhtml" icon="ui-icon-disk" />
+								outcome="/position/list.xhtml" icon="ui-icon-disk" />
 						</p:submenu>
 
 						<p:submenu label="RoleMangement" icon="ui-icon-arrowrefresh-1-w">
-							<p:menuitem value="CreateRole" action="/role/add.xhtml"
+							<p:menuitem value="CreateRole" outcome="/role/add.xhtml"
 								icon="ui-icon-disk" />
 							<p:menuitem value="UpdateRole"
-								action="/role/add.xhtml"
+								action="/role/list.xhtml"
 								icon="ui-icon-arrowrefresh-1-w" />
 						</p:submenu>
 						<p:submenu label="UserMangement">
-							<p:menuitem value="CreateUser" action="/user/add.xhtml"
+							<p:menuitem value="CreateUser" outcome="/user/add.xhtml"
 								icon="ui-icon-disk" />
 							<p:menuitem value="UpdateUser"
-								action="/user/add.xhtml"
+								outcome="/user/list.xhtml"
 								icon="ui-icon-arrowrefresh-1-w" />
 						</p:submenu>
 						<p:submenu label="EmployeeMangement">
 							<p:menuitem value="CreateEmployee"
-								action="/employee/add.xhtml" icon="ui-icon-disk" />
+								outcome="/employee/add.xhtml" icon="ui-icon-disk" />
 							<p:menuitem value="UpdateEmployee"
-								action="/employee/update.xhtml"
+								outcome="/employee/list.xhtml"
 								icon="ui-icon-arrowrefresh-1-w" />
 						</p:submenu>
 					</p:submenu>
