--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -7,7 +7,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
-	<title>Dashboard Template for BootsFaces</title>
+	<title>Dashboard </title>
 
 
 
@@ -89,15 +89,11 @@
 						</p:submenu>
 
 
-						<p:submenu label="RoleMangement" icon="ui-icon-arrowrefresh-1-w">
-							<p:menuitem value="CreateRole" outcome="/role/add.xhtml"
-							icon="ui-icon-disk" />
 						<p:submenu label="RoleMangement" >
-							<p:menuitem value="CreateRole" action="/role/add.xhtml"
-
+							<p:menuitem value="CreateRole" outcome="/role/add.xhtml"
 								icon="ui-icon-disk" />
 							<p:menuitem value="UpdateRole"
-								action="/role/list.xhtml"
+								outcome="/role/list.xhtml"
 								icon="ui-icon-arrowrefresh-1-w" />
 						</p:submenu>
 						<p:submenu label="UserMangement">
