--- a/src/main/webapp/function/add.xhtml
+++ b/src/main/webapp/function/add.xhtml
@@ -41,23 +41,14 @@
 
 
 
-							<p:outputLabel for="address" value="Description" />
-							<p:inputTextarea id="address" rows="5" cols="33" value=""
+							<p:outputLabel for="address" value="url" />
+							<p:inputText  id="address" value=""
 								requiredMessage="กรุณาระบุที่อยู่ " required="true"
 								validatorMessage="กรุณาใส่ที่อยู่จริง">
 								<f:validateLength minimum="10" />
 
-							</p:inputTextarea>
+							</p:inputText >
 							<p:message for="address" id="msgAddress" />
-
-
-
-
-
-
-
-
-
 
 						</h:panelGrid>
 
@@ -67,80 +58,6 @@
 					<br />
 
 
-
-
-
-
-
-
-
-					<h:form>
-
-						<p:fieldset legend="addWorkRight" id="paa">
-
-
-							<h:panelGrid columns="7" captionStyle="5">
-
-								<p:outputLabel for="workRight" value="workRight Name: " />
-								<p:inputText id="workRight" value="#{workBean.model.name}"
-									label="function" required="true" placeholder="ฟังก์ชั่น"
-									requiredMessage="กรุณากรอกนามสกุล"
-									validatorMessage="กรุณาใส่นามสกุลอย่างน้อย 2 ตัวอักษร">
-									<f:validateLength minimum="2" />
-
-								</p:inputText>
-								<p:message for="workRight" id="workRightx" />
-
-								<p:outputLabel for="url" value="url: " />
-								<p:inputText id="url" value="#{workBean.model.url}" label="url"
-									required="true" placeholder="ฟังก์ชั่น"
-									requiredMessage="กรุณากรอกนามสกุล"
-									validatorMessage="กรุณาใส่นามสกุลอย่างน้อย 2 ตัวอักษร">
-									<f:validateLength minimum="2" />
-
-								</p:inputText>
-								<p:message for="url" id="urls" />
-
-
-								<p:commandButton value="AddWorkRight" update="paa"
-									process="@form" actionListener="#{workBean.addWork}" />
-
-
-							</h:panelGrid>
-
-							<br />
-
-							<p:dataTable value="#{workBean.list}" var="work"
-								rowIndexVar="index" id="wtable" tableStyle="table-layout: auto;">
-								<p:column headerText="#">
-									<h:outputText value="#{index+1}" />
-								</p:column>
-
-								<p:column headerText="name">
-									<h:outputText value="#{work.name}" />
-								</p:column>
-
-								<p:column headerText="url">
-									<h:outputText value="#{work.url}" />
-								</p:column>
-
-
-								<p:column style="text-align:center;width:15%">
-									<p:commandButton value="delete" 
-										actionListener="#{workBean.delete(work)}" process="@this"
-										update="wtable"></p:commandButton>
-								</p:column>
-
-
-							</p:dataTable>
-
-							<br />
-							<br />
-
-						</p:fieldset>
-
-
-					</h:form>
 
 					<br />
 					<br />
