--- a/src/main/webapp/qt/create.xhtml
+++ b/src/main/webapp/qt/create.xhtml
@@ -33,7 +33,7 @@
 						<p:commandButton icon="fa fa-plus"  actionListener="#{qt.addProduct}" update="frm"></p:commandButton>
 
 						<p:commandButton update="frm" value="Create QT and Save"
-						 actionListener="#{qt.genDoc}"	 ></p:commandButton>
+						 action="#{qt.genDoc}" ajax="false"	 ></p:commandButton>
 
 					</h:panelGrid>
 
