--- a/src/main/webapp/user/add.xhtml
+++ b/src/main/webapp/user/add.xhtml
@@ -26,8 +26,8 @@
 
 					<h:panelGrid columns="3" cellpadding="5">
 
-						<p:outputLabel for="console" value="Employee: " />
-						<p:selectOneMenu id="console" value="" style="width:125px">
+						<p:outputLabel for="selectemployee" value="Employee: " />
+						<p:selectOneMenu id="selectemployee" value="" style="width:125px">
 							<f:selectItem itemLabel="Mark" itemValue="HR" />
 							<f:selectItem itemLabel="Jhone " itemValue="S DEV" />
 							<f:selectItem itemLabel="Accounting" itemValue="Accounting" />
