add Submenu (function) in Template

--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -48,6 +48,7 @@
 						<p:menuitem value="Employee" outcome="/employee/index.xhtml"></p:menuitem>
 						<p:menuitem value="Position " outcome="/position/index.xhtml"></p:menuitem>
 						<p:menuitem value="Customer" outcome="/customer/index.xhtml"></p:menuitem>
+						<p:menuitem value="Function" outcome="/function/index.xhtml"></p:menuitem>
 					</p:submenu>
 
 
