--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -45,6 +45,7 @@
 
 					<p:submenu label="Admin">
 						<p:menuitem value="User" outcome="/user/index.xhtml"></p:menuitem>
+						<p:menuitem value="Role" outcome="/role/index.xhtml"></p:menuitem>
 						<p:menuitem value="Employee" outcome="/employee/index.xhtml"></p:menuitem>
 						<p:menuitem value="Position " outcome="/position/index.xhtml"></p:menuitem>
 						<p:menuitem value="Customer" outcome="/customer/index.xhtml"></p:menuitem>
