--- a/src/main/webapp/function/index.xhtml
+++ b/src/main/webapp/function/index.xhtml
@@ -18,23 +18,23 @@
 
 				<p:tabView onTabChange="clearMessage()">
 
-					<p:tab title="Search Function">
+					<p:tab title="ค้นหาฟังก์ชัน">
 
 
 						<h:form id="search">
 							<h:panelGrid cellpadding="6" columns="6">
 
 
-								<h:outputLabel for="function" value="Function Name : " />
+								<h:outputLabel for="function" value="ชื่อฟังก์ชัน : " />
 								<p:inputText id="functionName" value="" required="true"
-									label="Function Name" />
+									label="ชื่อฟังก์ชัน" />
 
 								<h:outputLabel for="url" value="URl : " />
 								<p:inputText id="url" value="" required="true" label="URL" />
 
-								<p:commandButton icon="fa fa-search" value="Search"
+								<p:commandButton icon="fa fa-search" value="ค้นหา"
 									update="search" process="search"></p:commandButton>
-								<p:commandButton value="cancel" update="panel" process="@this"
+								<p:commandButton value="ยกเลิก" update="panel" process="@this"
 									icon="fa fa-times-circle">
 									<p:resetInput target="panel" />
 								</p:commandButton>
@@ -45,12 +45,12 @@
 
 					</p:tab>
 
-					<p:tab title="Create Function">
+					<p:tab title="สร้างฟังก์ชัน">
 						<h:form id="add">
 
 							<h:panelGrid columns="6" cellpadding="8">
 
-								<h:outputLabel for="FunctionName" value="Function Name : " />
+								<h:outputLabel for="FunctionName" value="ชื่อฟังก์ชัน : " />
 								<p:inputText id="FunctionName" value="" required="true"
 									label="FunctionName" />
 
@@ -58,9 +58,9 @@
 								<p:inputText id="URL" value="" required="true" label="URL" />
 
 
-								<p:commandButton value="save" update="add" ajax="true"
+								<p:commandButton value="บันทึก" update="add" ajax="true"
 									validateClient="true" process="add" icon="fa fa-save"></p:commandButton>
-								<p:commandButton value="cancel" update="panel" process="@this"
+								<p:commandButton value="ยกเลิก" update="panel" process="@this"
 									icon="fa fa-times-circle">
 									<p:resetInput target="panel" />
 								</p:commandButton>
@@ -79,7 +79,7 @@
 						<h:outputText value="#{index+1}" />
 					</p:column>
 
-					<p:column headerText="Function Name">
+					<p:column headerText="ชื่อฟังก์ชัน">
 						<h:outputText value="#{function.name}" />
 					</p:column>
 
