--- a/src/main/webapp/employee/index.xhtml
+++ b/src/main/webapp/employee/index.xhtml
@@ -26,9 +26,9 @@
 								<p:inputText id="sname" value="" required="true"
 									label="ชื่อจริง" />
 
-								<p:commandButton icon="fa fa-search" value="Search"
+								<p:commandButton icon="fa fa-search" value="ค้นหา"
 									update="search" process="search"></p:commandButton>
-								<p:commandButton value="cancel" update="panel" process="@this"
+								<p:commandButton value="ยกเลิก" update="panel" process="@this"
 									icon="fa fa-times-circle">
 									<p:resetInput target="panel" />
 								</p:commandButton>
@@ -144,9 +144,9 @@
 							<br />
 							<br />
 
-							<p:commandButton value="save" update="add" ajax="true"
+							<p:commandButton value="บันทึก" update="add" ajax="true"
 								validateClient="true" process="add" icon="fa fa-save"></p:commandButton>
-							<p:commandButton value="cancel" update="panel" process="@this"
+							<p:commandButton value="ยกเลิก" update="panel" process="@this"
 								icon="fa fa-times-circle">
 								<p:resetInput target="panel" />
 							</p:commandButton>
