--- a/src/main/webapp/user/index.xhtml
+++ b/src/main/webapp/user/index.xhtml
@@ -19,8 +19,8 @@
 							</p:inputText>
 
 							<p:commandButton process="search" update="panel"
-								icon="fa fa-search" value="search"></p:commandButton>
-							<p:commandButton value="cancel" update="panel" process="@this"
+								icon="fa fa-search" value="ค้นหา"></p:commandButton>
+							<p:commandButton value="ยกเลิก" update="panel" process="@this"
 								icon="fa fa-times-circle">
 								<p:resetInput target="panel" />
 							</p:commandButton>
