--- a/src/main/webapp/qt/addProduct.xhtml
+++ b/src/main/webapp/qt/addProduct.xhtml
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:f="http://java.sun.com/jsf/core">
 
 <h:head>
-	<title>Add Product</title>
+	<title>เพิ่มสินค้า บริการ</title>
 	<style type="text/css">
 .ui-widget {
 	font-size: 90%;
@@ -13,30 +14,37 @@
 </h:head>
 
 <h:body>
-	<h:form >
+	<h:form>
 
 
 		<h:panelGrid columns="4" cellpadding="3">
 
-			<p:outputLabel for="name" value="ชื่อสินค้า  :" />
-			<p:inputText id="name" value="" required="true" label="ชื่อสินค้า"
-				>
+			<p:outputLabel for="name_product" value="ชื่อสินค้า  :" />
+			<p:inputText id="name_product" value="" required="true" label="ชื่อสินค้า">
 
 			</p:inputText>
 
-			<p:outputLabel for="name_emp" value="ชื่อพนักงาน  :" />
-			<p:inputText id="name_emp" value="" required="true"  label="ชื่อพนักงาน"
-				>
+			<p:outputLabel  value="เลือกพนักงาน  :" />
+			<p:commandButton value="เลือก" action="#{qtBean.selectEmployee}"
+				process="@this">
+			</p:commandButton>
+
+			
+			<p:outputLabel for="name_emp" value="ชื่อพนักงาน:" />
+			<p:inputText id="name_emp" value="" required="true" label="ชื่อพนักงาน">
 
 			</p:inputText>
-	
 
-		
-			<p:outputLabel for="Position" value="ตำแหน่ง :" />
-			<p:inputText id="Position" value="" required="true"
-				label="ชื่อพนักงาน">
+			<p:outputLabel for="selectemployee" value="ตำแหน่ง  :" />
+			<p:selectOneMenu id="selectemployee" value="">
+				<f:selectItem
+					itemLabel="Professional Service for Senior Java Developer"
+					itemValue="HR" />
+				<f:selectItem itemLabel="Jhone " itemValue="S DEV" />
+				<f:selectItem itemLabel="Accounting" itemValue="Accounting" />
+			</p:selectOneMenu>
 
-			</p:inputText>
+
 
 			<p:outputLabel for="Period" value="ระยะเวลาของสัญญาจ้าง   : " />
 			<p:inputText id="Period" value="" label="ระยะเวลาของสัญญาจ้าง  "
@@ -46,36 +54,36 @@
 			</p:inputText>
 
 			<p:outputLabel for="quantity" value="ระยะเวลา : " />
-			<p:inputText id="quantity" value="" label="ระยะเวลา "
-				required="true" >
+			<p:inputText id="quantity" value="" label="ระยะเวลา " required="true">
 
 
 			</p:inputText>
-			
+
 			<p:outputLabel for="unit_type" value="หน่วยเวลา : " />
 			<p:inputText id="unit_type" value="" label="หน่วยเวลา "
-				required="true" >
+				required="true">
 
 
 			</p:inputText>
-			
+
 			<p:outputLabel for="unit_price" value="ราคา : " />
-			<p:inputText id="unit_price" value="" label="ราคา "
-				required="true" >
+			<p:inputText id="unit_price" value="" label="ราคา " required="true">
 
 
 			</p:inputText>
-			
-			<p:outputLabel for="projectname" value="ชื่อโปรเจ็ค : " />
+
+			<p:outputLabel for="projectname" value="ชื่อ โปรเจ็ค : " />
 			<p:inputText id="projectname" value="" label="ชื่อโปรเจ็ค "
-				required="true" >
+				required="true">
 
 
 			</p:inputText>
-			
+
 		</h:panelGrid>
 
-	<p:commandButton value="Add"> </p:commandButton>
+		<p:commandButton value="เพิ่ม" action="#{qtBean.addQuotationDetail}"
+			process="@this">
+		</p:commandButton>
 
 	</h:form>
 </h:body>
